--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                             <div class="ms-layer msp-cn-1-1" style data-effect=t(true,n,-1500,n,n,n,n,n,n,n,n,n,n,n,n) data-duration=675 data-ease=easeOutQuint data-offset-x=0 data-offset-y=-144 data-origin=mc data-position=normal><img src="upload/evento logo.svg" alt="null" class="img-fluid"/></div>
                                             <div class="ms-layer msp-cn-1-2" style data-effect=t(true,n,n,-1500,n,n,n,n,n,n,n,n,n,n,n) data-duration=612 data-delay=550 data-ease=easeOutQuint data-offset-x=0 data-offset-y=-44 data-origin=mc data-position=normal> 
 												<p></br></br></p>
-                                              <p> 3 e 6 de AGOSTO de 2021</p>
+                                              <p style="font-family:Montserrat"> 3 e 6 de AGOSTO de 2021</p>
                                       </div><a href=https://forms.gle/SiocFdpKQF9HWjrM9 target=_blank class="ms-layer msp-cn-1-11 ms-btn ms-btn-round ms-btn-n msp-preset-btn-159" data-effect=t(true,n,n,500,n,n,n,n,n,n,n,n,n,n,n) data-duration=725 data-delay=1262 data-ease=easeOutQuint data-type=button data-offset-x=-150 data-offset-y=150 data-origin=mc data-position=normal> INSCRIÇÃO PARA EMPRESAS</a><a href=https://forms.gle/pHdoPyiDnLJ9PZau7 target=_blank class="ms-layer msp-cn-1-11b ms-btn ms-btn-round ms-btn-n msp-preset-btn-159" data-effect=t(true,n,n,500,n,n,n,n,n,n,n,n,n,n,n) data-duration=725 data-delay=1662 data-ease=easeOutQuint data-type=button data-offset-x=180 data-offset-y=150 data-origin=mc data-position=normal> INSCRIÇÃO PARA STARTUPS</a></div>
                                         </div>
                                     </div>
@@ -172,8 +172,8 @@ O Connect Now Brasil é um evento on-line que oportuniza a conexão e a geraçã
                                             <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">EMPRESAS ÂNCORAS</h3>
                                             <div class=clear></div>
                                         </div>
-                                         <div class="gdlr-item-title-caption gdlr-skin-info">Venha fazer negócio com as empresas ancoras participantes do Connect Now Brasil
-faltou um acento na âncoras.</div>
+                                         <div class="gdlr-item-title-caption gdlr-skin-info">Venha fazer negócio com as empresas ancoras participantes do Connect Now Brasil.
+.</div>
                                     </div>
                                 </div>
                                 <div class=clear></div>
