--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@ O Connect Now Brasil é um evento on-line que oportuniza a conexão e a geraçã
                                             <h3 class="gdlr-item-title gdlr-skin-title gdlr-skin-border gdlr-title-large">EMPRESAS ÂNCORAS</h3>
                                             <div class=clear></div>
                                         </div>
-                                         <div class="gdlr-item-title-caption gdlr-skin-info">Venha fazer negócio com as empresas ancoras participantes do Connect Now Brasil.
-.</div>
+                                         <div class="gdlr-item-title-caption gdlr-skin-info">Venha fazer negócio com as empresas ancoras participantes do Connect Now Brasil.</div>
                                     </div>
                                 </div>
                                 <div class=clear></div>
