--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                             <div class=box-with-circle-icon style="background-color: #299947"><i class = "material-icons" style="font-size:30px; color:#FFFFFF;">shopping_cart</i>
                                                 <br>
                                             </div>
-                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction()">Compras de passagens</h3>
+                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction()">Compras de</br>passagens</h3>
                                             <div class=clear></div>
                                             <div class=box-with-icon-caption id="myDIV">
                                                 <p>Cada vez mais, os clientes querem uma experiência positiva de compra on-line. Consideramos ser estratégico integrar todos os canais de atendimento dentro de um conceito omnichannel, tendo como foco experiências de compra mais completas para os consumidores. Neste contexto, buscamos soluções que garantam que o processo de compra, pagamento e utilização de passagens pelo cliente não apresentem rupturas ou interrupções e mantenha-se fluido, independentemente do canal utilizado.</p>
@@ -292,7 +292,7 @@
                                             <div class=box-with-circle-icon style="background-color: #299947;"><i class = "material-icons" style="font-size:30px; color:#FFFFFF;">people</i>
                                                 <br>
                                             </div>
-                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction2()">Customer Experience</h3>
+                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction2()">Customer</br>Experience</h3>
                                             <div class=clear></div>
                                             <div class=box-with-icon-caption id="myDIV2">
                                                 <p>Queremos conhecer nossos clientes, identificar perfis e ser capazes de gerar valor único e personalizado. Estamos interessados em soluções que considerem a jornada dos nossos clientes ao longo das diversas etapas de relacionamento e utilização dos serviços. A solução deve gerar dados relevantes para a tomada de decisão, otimização processos e integração de canais digitais, aprimorando o relacionamento e aumentando a fidelização dos clientes.</p>
