--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                             <div class=box-with-circle-icon style="background-color: #299947"><i class = "material-icons" style="font-size:30px; color:#FFFFFF;">shopping_cart</i>
                                                 <br>
                                             </div>
-                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction()">Compras de</br>passagens</h3>
+                                            <h3 class="box-with-icon-title" style="font-size:30px; cursor: pointer;" onclick="myFunction()">Vendas</br>Multicanais</h3>
                                             <div class=clear></div>
                                             <div class=box-with-icon-caption id="myDIV">
                                                 <p>Cada vez mais, os clientes querem uma experiência positiva de compra on-line. Consideramos ser estratégico integrar todos os canais de atendimento dentro de um conceito omnichannel, tendo como foco experiências de compra mais completas para os consumidores. Neste contexto, buscamos soluções que garantam que o processo de compra, pagamento e utilização de passagens pelo cliente não apresentem rupturas ou interrupções e mantenha-se fluido, independentemente do canal utilizado.</p>
