--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ do setor de transporte de passageiros para discutir oportunidades de negócios.<
                                             <div class=column-service-content-wrapper>
                                               
                                                 <div class="column-service-content gdlr-skin-content" style="color: #ffffff; font-weight: bold; text-align: center; margin-top: 40px">
-                                                    <i class = "material-icons" style="font-size:30px; color:#FFFFFF;">mail</i><p>Informações: fernando@agstartups.or.br</p>
+                                                    <i class = "material-icons" style="font-size:30px; color:#FFFFFF;">mail</i><p>Informações: fernando@agstartups.org.br</p>
                                                 </div>
                                             </div>
                                         </div>
